--- a/scss/themes/chat/dracula.scss
+++ b/scss/themes/chat/dracula.scss
@@ -61,6 +61,12 @@ $genders: (
   'cunt-boy': $dracula-green
 );
 
+.list-group.conversation-nav
+  .list-group-item-action.item-private.active
+  .online-status {
+  color: color-contrast($primary);
+}
+
 @each $gender, $color in $genders {
   .gender-#{$gender} {
     color: $color;
