--- a/scss/themes/chat/light.scss
+++ b/scss/themes/chat/light.scss
@@ -32,6 +32,12 @@
   }
 }
 
+.list-group.conversation-nav
+  .list-group-item-action.item-private.active
+  .online-status {
+  color: color-contrast($primary);
+}
+
 .quick-jump-result.selected {
   color: #fff;
 }
